--- a/package.json
+++ b/package.json
@@ -60,12 +60,12 @@
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-native": "0.52.2",
-    "react-native-vector-icons": "winningfotos/react-native-vector-icons#87198ac",
+    "react-native-vector-icons": "winningfotos/react-native-vector-icons",
     "react-test-renderer": "16.2.0",
     "webpack": "^2.2.1"
   },
   "peerDependencies": {
-    "react-native-vector-icons": "winningfotos/react-native-vector-icons#87198ac"
+    "react-native-vector-icons": "winningfotos/react-native-vector-icons"
   },
   "jest": {
     "preset": "react-native",
